--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   firebase_core: ^3.2.0
   animated_splash_screen: ^1.3.0
   lottie: ^3.1.2
+  google_maps_flutter: ^2.7.0
 
 dev_dependencies:
   flutter_test:
