--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   animated_splash_screen: ^1.3.0
   lottie: ^3.1.2
   google_maps_flutter: ^2.7.0
+  location: ^7.0.0
 
 dev_dependencies:
   flutter_test:
