--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,11 @@ dependencies:
   lottie: ^3.1.2
   google_maps_flutter: ^2.7.0
   location: ^7.0.0
+  flutter_polyline_points: ^2.1.0
+  stop_watch_timer: ^3.1.1
+  geolocator: ^12.0.0
+  google_fonts: ^6.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
