--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dependencies:
   geolocator: ^12.0.0
   google_fonts: ^6.2.1
   intl: ^0.19.0
+  weather: ^3.1.1
+  http: ^1.2.2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
