--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,9 @@ dependencies:
   weather: ^3.1.1
   http: ^1.2.2
   geocoding: ^3.0.0
+  sqflite: ^2.3.3+1
+  path_provider: ^2.1.3
+  cloud_firestore: ^5.1.0
 
 dev_dependencies:
   flutter_test:
