--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,13 @@ dependencies:
   sqflite: ^2.3.3+1
   path_provider: ^2.1.3
   cloud_firestore: ^5.1.0
+  google_sign_in: ^6.2.1
+  flutter_launcher_icons: ^0.13.1
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/Untitled.png"
 
 dev_dependencies:
   flutter_test:
